add project section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,65 @@
         freelance developer whilst looking for my first role in tech.
       </p>
     </section>
-    <div class="gradient"></div>
+    <div class="gradient-intro"></div>
+    <div class="section-projects">
+      <section id="projects">
+        <h2>PROJECTS I AM PROUD OF</h2>
+        <article>
+          <div class="text">
+            <h4>Latest Projects</h4>
+            <h3>Fantasy Football</h3>
+            <p class="bluebox">
+              This is an ongoing personal project that was created out of my
+              love for football and interest in data/statistics for the purpose
+              of self-education. In this application the user will be able to
+              make their dream team using the existing player cards without
+              limits or restrictions. Please search for a player in the search
+              box!
+            </p>
+            <h4>Technologies used include:</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Tailwind CSS</li>
+              <li>Node.JS</li>
+              <li>JavaScript</li>
+              <li>React</li>
+              <li>Next.JS</li>
+            </ul>
+          </div>
+          <img
+            src="./img/football fantasy snap.jpg"
+            alt="Football pitch with players on it"
+          />
+        </article>
+        <article class="reverse">
+          <div class="text">
+            <h3>Hummingbird</h3>
+            <p class="bluebox">
+              ManyPets, like many other tech related companies, need to monitor
+              their third-party services i.e. Twillio, Netlify and Auth0 as they
+              are vital to their operations. Hummingbird was created to address
+              this issue in a user-friendly way.
+            </p>
+            <h4>Technologies used include:</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Tailwind CSS</li>
+              <li>Node.JS</li>
+              <li>JavaScript</li>
+              <li>React</li>
+              <li>Next.JS</li>
+            </ul>
+          </div>
+          <img
+            src="./img/Hummingbird landing page.jpg"
+            alt="landing page for Hummingbird"
+          />
+        </article>
+      </section>
+      <div class="gradient-contact"></div>
     <div class="section-contact">
       <section id="contact">
         <h2>Contact me</h2>
@@ -79,7 +137,7 @@
         </p>
       </section>
     </div>
-    <div class="gradient"></div>
+    <div class="gradient-footer"></div>
     <footer>
       <h2>Mahdi Sattarnia &middot; Developer</h2>
       <ul>
