add about page and change some images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Mahdi Sattarnia Web Development</title>
   </head>
+
   <body>
     <nav>
       <ul>
@@ -60,8 +61,8 @@
         and Next.JS.
       </p>
       <p>
-        Currently, after finishing the School-Of-Code bootcamp, I work as a
-        freelance developer whilst looking for my first role in tech.
+        Currently, I work as a freelance developer whilst looking for my first
+        role in tech.
       </p>
     </section>
     <div class="gradient-intro"></div>
@@ -71,14 +72,16 @@
         <article>
           <div class="text">
             <h4>Latest Projects</h4>
-            <h3>Fantasy Football</h3>
+            <h3>All Things Football</h3>
             <p class="bluebox">
               This is an ongoing personal project that was created out of my
               love for football and interest in data/statistics for the purpose
               of self-education. In this application the user will be able to
               make their dream team using the existing player cards without
-              limits or restrictions. Please search for a player in the search
-              box!
+              limits or restrictions.The user will also be able to catch up
+              their favorite players and find out more about them. Features like
+              transfer news and match reports will come soon. Please search for
+              a player in the search box!
             </p>
             <h4>Technologies used include:</h4>
             <ul>
@@ -86,13 +89,14 @@
               <li>CSS</li>
               <li>Tailwind CSS</li>
               <li>Node.JS</li>
+              <li>SQL</li>
               <li>JavaScript</li>
               <li>React</li>
               <li>Next.JS</li>
             </ul>
           </div>
           <img
-            src="./img/football fantasy snap.jpg"
+            src="./img/football-app-cover.jpg"
             alt="Football pitch with players on it"
           />
         </article>
@@ -100,10 +104,10 @@
           <div class="text">
             <h3>Hummingbird</h3>
             <p class="bluebox">
-              ManyPets, like many other tech related companies, need to monitor
-              their third-party services i.e. Twillio, Netlify and Auth0 as they
-              are vital to their operations. Hummingbird was created to address
-              this issue in a user-friendly way.
+              Hummingbird is a monitoring service that will allow the user to
+              view and observe the health of their third-party services i.e.
+              Twillio, Netlify and Auth0 as they are vital to their operations.
+              Hummingbird addresses this issue in a user-friendly. way.
             </p>
             <h4>Technologies used include:</h4>
             <ul>
@@ -112,6 +116,7 @@
               <li>Tailwind CSS</li>
               <li>Node.JS</li>
               <li>JavaScript</li>
+              <li>TypeScript</li>
               <li>React</li>
               <li>Next.JS</li>
             </ul>
@@ -122,7 +127,8 @@
           />
         </article>
       </section>
-      <div class="gradient-contact"></div>
+    </div>
+    <div class="gradient-contact"></div>
     <div class="section-contact">
       <section id="contact">
         <h2>Contact me</h2>
