change project name

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <article>
           <div class="text">
             <h4>Latest Projects</h4>
-            <h3>All Things Football</h3>
+            <h3>Fantasy Football</h3>
             <p class="bluebox">
               This is an ongoing personal project that was created out of my
               love for football and interest in data/statistics for the purpose
