add links for projects and fixed typo

--- a/index.html
+++ b/index.html
@@ -74,14 +74,19 @@
             <h4>Latest Projects</h4>
             <h3>Fantasy Football</h3>
             <p class="bluebox">
-              This is an ongoing personal project that was created out of my
-              love for football and interest in data/statistics for the purpose
-              of self-education. In this application the user will be able to
-              make their dream team using the existing player cards without
-              limits or restrictions.The user will also be able to catch up
-              their favorite players and find out more about them. Features like
-              transfer news and match reports will come soon. Please search for
-              a player in the search box!
+              <a
+                href="https://football-player-cards.vercel.app/"
+                target="_blank"
+                >Fantasy Football</a
+              >
+              is an ongoing personal project that was created out of my love for
+              football and interest in data/statistics for the purpose of
+              self-education. In this application the user will be able to make
+              their dream team using the existing player cards without limits or
+              restrictions.The user will also be able to catch up their favorite
+              players and find out more about them. Features like transfer news
+              and match reports will come soon. Please search for a player in
+              the search box!
             </p>
             <h4>Technologies used include:</h4>
             <ul>
@@ -104,10 +109,17 @@
           <div class="text">
             <h3>Hummingbird</h3>
             <p class="bluebox">
-              Hummingbird is a monitoring service that will allow the user to
-              view and observe the health of their third-party services i.e.
-              Twillio, Netlify and Auth0 as they are vital to their operations.
-              Hummingbird addresses this issue in a user-friendly. way.
+              <strong
+                >PLEASE LOG IN USING: Username: john@typical.email Password:
+                test</strong
+              >
+              <a href="https://hummingbird-three.vercel.app/" target="_blank"
+                >Hummingbird</a
+              >
+              is a monitoring service that will allow the user to view and
+              observe the health of their third-party services i.e. Twillio,
+              Netlify and Auth0 as they are vital to their operations.
+              Hummingbird addresses this issue in a user-friendly way.
             </p>
             <h4>Technologies used include:</h4>
             <ul>
