--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
               football and interest in data/statistics for the purpose of
               self-education. In this application the user will be able to make
               their dream team using the existing player cards without limits or
-              restrictions.The user will also be able to catch up their favorite
-              players and find out more about them. Features like transfer news
-              and match reports will come soon. Please search for a player in
-              the search box!
+              restrictions.The user will also be able to catch up with their
+              favorite players and find out more about them. Features like
+              transfer news and match reports will come soon. Please search for
+              a player in the search box!
             </p>
             <h4>Technologies used include:</h4>
             <ul>
