fixed typo line 58 index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
     <section id="intro">
       <p class="name">Hi, my name is <span>Mahdi Sattarnia.</span></p>
-      <h2>I Develope Full-Stack applications.</h2>
+      <h2>I Develop Full-Stack applications.</h2>
       <p>
         I am a developer specialising in HTML, CSS, user experience, React, Node
         and Next.JS.
