about content changed

--- a/about.html
+++ b/about.html
@@ -61,11 +61,11 @@
           <h3>Just the highlights</h3>
           <p class="blackbox">
             I grew up in north of London and currently reside in the beautiful
-            city of Newcastle-Upon-Tyne in North East of England. I am a career
-            switcher, with a background in sales and marketing. I have Persian
-            roots, played professional basketball, professional poker, and I
-            have been involved in
-            <strong>Web Develpment</strong> for nearly one year.
+            city of Newcastle-Upon-Tyne in North East of England. After many
+            years of building a sucessful career in sales I made a bold move to
+            become a developer. I am Persian, played professional basketball,
+            played professional poker, and I have been involved in
+            <strong>Web Develpment</strong> for one year.
           </p>
           <h4>My favorite technologies include:</h4>
           <ul>
