--- a/about.html
+++ b/about.html
@@ -71,6 +71,8 @@
           <ul>
             <li>React</li>
             <li>Next.js</li>
+            <li>JavaScript</li>
+            <li>TypeScript</li>
             <li>HTML</li>
             <li>CSS</li>
             <li>Tailwind</li>
